--- a/.github/workflows/platform-test.yml
+++ b/.github/workflows/platform-test.yml
@@ -1,6 +1,6 @@
 # This workflow runs the unit test (`go test ./...`) on vaious platforms,
 # such as: Linux, macOS and Windows.
-name: UnitTests
+name: Platform Tests
 
 on:
   workflow_dispatch:
