--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,5 +15,9 @@ FROM ghcr.io/keinos/vscode-dev-container-go:${VARIANT}
 # RUN apk add --no-cache <your-package-list-here>
 
 # [Optional] Uncomment this section to go install anything else you need.
-# USER vscode
-# RUN cd /tmp && go install "<your-package-here>@<version>"
+USER vscode
+RUN cd /tmp && \
+    go install "github.com/d5/tengo/cmd/tengo@latest" && \
+    go install "golang.org/x/lint/golint@latest" && \
+    go install "github.com/ekalinin/github-markdown-toc.go/cmd/gh-md-toc@latest" && \
+    mkdir -p ~/.vscode-server/extensions
