--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,12 +30,14 @@
 		"extensions.ignoreRecommendations": true,
 		"files.associations": {
 			"*.qiitan": "go"
-		}
+		},
+		"shellformat.path": "/go/bin/shfmt"
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"golang.Go"
+		"golang.Go",
+		"foxundermoon.shell-format"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
