--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,7 +21,7 @@
 #    3. Create a tap config file for Homebrew. (./bin/<app_name>.rb)
 #    4. It pushes the archived assets to the release page on GitHub.
 #    5. It pushes the config file for Homebrew tap installation to the repo.
-#           https://github.com/Qithub-BOT/homebrew-apps/
+#           https://github.com/Qiitadon/homebrew-apps/
 #
 #  How It Works
 #
@@ -113,21 +113,21 @@ brews:
   -
     # Name of the Homebrew package: /<TAP REPO ROOT DIR>/Formula/<name>.rb
     name: qiitan
-    # Target repo to tap: Qithub-BOT/homebrew-apps
+    # Target repo to tap: Qiitadon/homebrew-apps
     tap:
-      owner: Qithub-BOT
+      owner: Qiitadon
       name: homebrew-apps
-    # Target directory: Qithub-BOT/homebrew-apps/Formula
+    # Target directory: Qiitadon/homebrew-apps/Formula
     folder: Formula
     # URL of the archive in releases page
-    url_template: "https://github.com/Qithub-BOT/Qiitan-go/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    url_template: "https://github.com/Qiitadon/Qiitan-go/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     # Author info to commit to the tap repo
     commit_author:
       name: goreleaserbot
       email: goreleaser@carlosbecker.com
     # Message to display on `brew search` or `brew info`
-    description: "This is a sample app of github.com/Qithub-BOT/Qiitan-go. It simply prints 'Hello, Gopher!'."
-    homepage: "https://github.com/Qithub-BOT/Qiitan-go/"
+    description: "This is a sample app of github.com/Qiitadon/Qiitan-go. It simply prints 'Hello, Gopher!'."
+    homepage: "https://github.com/Qiitadon/Qiitan-go/"
     # Let brew command pull the archive via cURL
     download_strategy: CurlDownloadStrategy
     # Let brew command instll the binary as `qiitan`
