--- a/.editorconfig
+++ b/.editorconfig
@@ -12,8 +12,12 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.md]
+indent_size = 2
+
 [*.go]
 indent_style = tab
+indent_size = 4
 
 # Shell-format
 [*.sh]
